tests/negative/semantic/byte_increment_error/input.ci
void main() {
    byte b = 5;
    b++;
}
